14Jan23=======================================================================
1. Fixed route PC11 promotions so that a new PC61 is actually generated and 
   also sent instead of the original PC11 (to PC61 capable nodes).
13Jan23=======================================================================
1. Periodically store Routing tables and, if they are young enough (def: 3hrs)
   autotically restore them on restart of the node. This will short circuit
   the need to rebuild the routing tables from scratch on every restart - 
   which is normally for something like software update. 
2. Fix pc11 debugging stats with the correct figures. Sigh... Also move some
   of the totals to a different place.
3. Add show/spotstats command which gives the current spot statistics shown
   during pc11 debugging (which means you don't need to set/deb pc11 unless
   you really want that extra noise).
12Jan23=======================================================================
1. Regularise 'set/debug pc11' output to track all the routes through PC11 and
   PC61 processing and statistics.
11Jan23=======================================================================
1. Improve (?) the PC11 -> PC61 upgrading process that delays incoming PC11s
   for a very short time in the hope that a PC61 will come in to be used 
   instead. It will also upgrade a PC11 if we have an uptodate IP address 
   that has come in from the routing system PC92s. do a 'set/debug pc11' to 
   see it in action.   
2. I have chosen a definitive list of TOR exits and relays which can be 
   downloaded from http://www.dxspider.net/download/badip.torexit,
   http://www.dxspider.net/download/badip.torrelay and finally, for those IP
   addresses that are deemed to be 'bad':
   http://www.dxspider.net/download/badip.global. I have added the following 
   lines to my /spider/local_cmd/crontab:

24 * * * * spawn('cd /spider/local_data; wget -qN http://www.dxspider.net/download/badip.torexit')